k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gifsapp
  labels:
    name: gifsapp
spec:
  ports:
  - port: 80
    name: http
  selector:
    name: gifsapp
