k8s-manifest/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gifsapp
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  # cambiar 20.72.99.142 por el IP de tu Ingress 
spec:
  ingressClassName: nginx
  rules:
  - host: gifsapp.10.224.0.5.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: gifsapp
            port:
              number: 80
